--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -45,6 +45,7 @@ jobs:
         with:
           node-version: 18
           cache: npm
+          cache-dependency-path: /home/runner/.npm/package-lock.json
         
       # The `run` key tells the job to execute a command on the runner. In this example, `npm ci` is used to install the npm software packages for the project.
       - name: Install
