--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.1",
-    "eslint": "^7.32.0",
+    "eslint": "8.0.0",
     "framer-motion": "^6.2.8",
     "markdown-to-jsx": "^7.1.7",
     "react": "^17.0.2",
