--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -17,7 +17,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '19 4 * * 6'
+    - cron: '0 * * * *'
 
 jobs:
   analyze:
