--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -38,4 +38,4 @@ jobs:
         npm run test
         
     - name: codeql
-      uses: jeanegpedrosa/github-actions-dotnet-webapp/.github/workflows/codeql.yml@main
+      uses: actions/codeql.yml@main
